More page structure built out with very simple Tailwind grid arrangements as to avoid too much opinionation before receiving the design.

--- a/docs/.vuepress/styles/_mixins.scss
+++ b/docs/.vuepress/styles/_mixins.scss
@@ -13,3 +13,9 @@
   white-space: nowrap !important;
   border: 0 !important;
 }
+
+@mixin img-full {
+  max-width: 100%;
+  width: 100%;
+  height: auto
+}
